@@ -412,6 +412,17 @@ AC_ARG_ENABLE(ipv6,
     fi
   ])
 
+dnl OpenSSL support
+AC_ARG_ENABLE(openssl,
+  [AC_HELP_STRING(
+    [--enable-openssl],
+    [enable OpenSSL support (default=no)])
+  ],
+  [ if test x"$enableval" = xyes ; then
+      AC_DEFINE(PR_USE_OPENSSL, 1, [Define if using OpenSSL support.])
+    fi
+  ])
+
 dnl Sendfile support.
 AC_ARG_ENABLE(sendfile,
   [AC_HELP_STRING(
