@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.749 2006-04-17 22:48:36 castaglia Exp $
+$Id: NEWS,v 1.750 2006-04-19 16:44:22 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -36,6 +36,11 @@ CVS
   and doc/contrib/mod_quotatab_radius.html for more information.
 - Bug 2651 - LogFormat should support variable for logging the response
   message.  A new %S logging variable has been added.
+- Bug 2447 - HAVE_OPENSSL should be managed by configure.  There is a
+  new configure option, --enable-openssl, which is honored by mod_ldap
+  and mod_sql.  This configure option can be used instead of using
+  the HAVE_OPENSSL CFLAGS variable, although HAVE_OPENSSL will still work.
+  The LDFLAGS and LIBS variables may still be necessary.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
